{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 36,
  "lineage": "aeec1fd3-2c4b-b9d9-6eb3-a5fd32e6a49a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MLModelInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-073c8c0760395aab8",
            "arn": "arn:aws:ec2:ap-south-1:308856984376:instance/i-0e7041bad31d31886",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ml_model_profile_1",
            "id": "i-0e7041bad31d31886",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-instance",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0814d64bdc618b25e",
            "private_dns": "ip-10-0-226-149.ap-south-1.compute.internal",
            "private_ip": "10.0.226.149",
            "public_ip": "13.233.150.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-057a5eab35138c56d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0efc1c30a2cbcc446"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbb17c682bc54676",
            "tags": {
              "Name": "MLModelInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0efc1c30a2cbcc446"
            ]
          },
          "dependencies": [
            "aws_security_group.main_sg",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "MLModellingMonitoringInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-073c8c0760395aab8",
            "arn": "arn:aws:ec2:ap-south-1:308856984376:instance/i-0bd4ed1885d44fc8f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ml_model_monitoring_main_instance_profile",
            "id": "i-0bd4ed1885d44fc8f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-instance",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03b6c1f726469975d",
            "private_dns": "ip-10-0-46-49.ap-south-1.compute.internal",
            "private_ip": "10.0.46.49",
            "public_ip": "15.207.98.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-047aa4a4f5cf1bbee",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0efc1c30a2cbcc446"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbb17c682bc54676",
            "tags": {
              "Name": "MLModellingMonitoringInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0efc1c30a2cbcc446"
            ]
          },
          "dependencies": [
            "aws_security_group.main_sg",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:308856984376:internet-gateway/igw-0a8905768ad83db9d",
            "id": "igw-0a8905768ad83db9d",
            "owner_id": "308856984376",
            "vpc_id": "vpc-0d534d46eb42a225b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0976755130b7fda01",
            "owner_id": "308856984376",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8905768ad83db9d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0d534d46eb42a225b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0671cf782358688f2",
            "route_table_id": "rtb-0976755130b7fda01",
            "subnet_id": "subnet-0cbb17c682bc54676"
          },
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.main_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:308856984376:security-group/sg-0efc1c30a2cbcc446",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0efc1c30a2cbcc446",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "main_sg",
            "name_prefix": null,
            "owner_id": "308856984376",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d534d46eb42a225b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:308856984376:subnet/subnet-0cbb17c682bc54676",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-0cbb17c682bc54676",
            "map_public_ip_on_launch": false,
            "owner_id": "308856984376",
            "tags": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-0d534d46eb42a225b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:308856984376:vpc/vpc-0d534d46eb42a225b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-070bb3c93522c3899",
            "default_route_table_id": "rtb-0d5e15e8395b1bc56",
            "default_security_group_id": "sg-0dedd8c9009baccee",
            "dhcp_options_id": "dopt-7817e713",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d534d46eb42a225b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d5e15e8395b1bc56",
            "owner_id": "308856984376",
            "tags": {
              "Name": "main-vpc"
            }
          }
        }
      ]
    }
  ]
}